changed the styling around and disabled scroll

--- a/index.css
+++ b/index.css
@@ -1,8 +1,18 @@
 body {
     font-family: Roboto;
     margin-top: 70px;
-    background: #282828;
+    background: #283565;
     color: #fff;
+    overflow: hidden;
+}
+
+.container {
+   margin: 0;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   margin-right: -50%;
+   transform: translate(-50%, -50%);
 }
 
 .card-block {
