--- a/index.css
+++ b/index.css
@@ -15,6 +15,11 @@ body {
    transform: translate(-50%, -50%);
 }
 
+.display-4 {
+    font-family: "Raleway";
+    font-weight: 500;
+}
+
 .card-block {
     padding: 20px;
 }
